--- a/Source/Main/ReviaRace.csproj
+++ b/Source/Main/ReviaRace.csproj
@@ -88,6 +88,7 @@
     <Compile Include="HarmonyPatches\DamageWorker_AddInjury.cs" />
     <Compile Include="HarmonyPatches\Entry.cs" />
     <Compile Include="HarmonyPatches\HeredityPatcher.cs" />
+    <Compile Include="HarmonyPatches\PawnRenderNode_RecacheRequested_Patch.cs" />
     <Compile Include="Helpers\ReviaDefOf.cs" />
     <Compile Include="Helpers\Defs.cs" />
     <Compile Include="Helpers\PawnHelpers.cs" />
@@ -100,7 +101,10 @@
     <Compile Include="Needs\BloodthirstNeed.cs" />
     <Compile Include="PersistentData\ReviaSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Render\PawnRenderNodeProperties_Animated.cs" />
     <Compile Include="Render\PawnRenderNodeProperties_BodyPart.cs" />
+    <Compile Include="Render\PawnRenderNodeWorker_Animated.cs" />
+    <Compile Include="Render\PawnRenderNode_Animated.cs" />
     <Compile Include="Render\PawnRenderNode_HeadBodyPart.cs" />
     <Compile Include="ReviaRaceMod.cs" />
     <Compile Include="RoomRoleWorkers\SkarneChapel.cs" />
