--- a/Source/FA_Patch/FA_Patch.csproj
+++ b/Source/FA_Patch/FA_Patch.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release 1.5|AnyCPU'">
-    <OutputPath>bin\Release 1.5\</OutputPath>
+    <OutputPath>..\..\FA_Compat\Assemblies\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
