--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,4 @@ UnityEngine.dll
 /Source/Main/obj/Debug
 /Source/Main/obj
 /Source/Revia_VanillaPsycastExpanded/obj
-/Source/ThirdPartyAssemblies/VanillaPsycastsExpanded.dll
+/Source/ThirdPartyAssemblies
