--- a/Source/Revia_VanillaPsycastExpanded/Revia_VanillaPsycastExpanded.csproj
+++ b/Source/Revia_VanillaPsycastExpanded/Revia_VanillaPsycastExpanded.csproj
@@ -50,7 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ability_Bloodseek.cs" />
+    <Compile Include="Bloodseek\Ability_Bloodseek.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
