--- a/Source/Revia_VanillaPsycastExpanded/Revia_VanillaPsycastExpanded.csproj
+++ b/Source/Revia_VanillaPsycastExpanded/Revia_VanillaPsycastExpanded.csproj
@@ -54,9 +54,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Krafs.Publicizer">
+      <Version>2.3.0</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Krafs.Rimworld.Ref">
       <Version>1.5.4297</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+	<ItemGroup>
+		<Publicize Include="Assembly-CSharp"/>
+	</ItemGroup>
 </Project>
