--- a/Source/Revia_VanillaPsycastExpanded/Revia_VanillaPsycastExpanded.csproj
+++ b/Source/Revia_VanillaPsycastExpanded/Revia_VanillaPsycastExpanded.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SkarneAvatar\JobGiver_SkarneAvatar.cs" />
     <Compile Include="SkarneAvatar\MentalState_SkarneAvatar.cs" />
+    <Compile Include="SkarnesCurse\Ability_SkarnesCurse.cs" />
+    <Compile Include="SkarnesCurse\HediffComp_SkarnesCurse.cs" />
     <Compile Include="SkarnesProtection\AbilityExtension_SkarneProtection.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
