--- a/Source/Main/ReviaRace.csproj
+++ b/Source/Main/ReviaRace.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Comps\InvokeSanctify.cs" />
     <Compile Include="Comps\CompLifeLeech.cs" />
     <Compile Include="Comps\SacrificeSpotComp.cs" />
+    <Compile Include="Comps\StartRitual_Comp.cs" />
     <Compile Include="DebugActions.cs" />
     <Compile Include="Enums\BornSettingsEnum.cs" />
     <Compile Include="Genes\ReviaBaseGene.cs" />
