--- a/Source/Main/ReviaRace.csproj
+++ b/Source/Main/ReviaRace.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Genes\ReviaTailGene.cs" />
     <Compile Include="Genes\ReviaTeethGene.cs" />
     <Compile Include="HarmonyPatches\AlphaGenes_Patch.cs" />
+    <Compile Include="HarmonyPatches\BleedRate_Patch.cs" />
     <Compile Include="HarmonyPatches\DamageWorker_AddInjury.cs" />
     <Compile Include="HarmonyPatches\Entry.cs" />
     <Compile Include="HarmonyPatches\HeredityPatcher.cs" />
