--- a/Source/Main/ReviaRace.csproj
+++ b/Source/Main/ReviaRace.csproj
@@ -113,6 +113,7 @@
     <Compile Include="RitualRole\RitualRoleRevia.cs" />
     <Compile Include="RitualRole\RitualRoleReviaOrSkarnite.cs" />
     <Compile Include="Rituals\RitualOutcomeEffectWorker_Sacrificed.cs" />
+    <Compile Include="Rituals\SacrificeBaseScore_Extension.cs" />
     <Compile Include="RoomRoleWorkers\SkarneChapel.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Workers\SacrificeWorker.cs" />
