--- a/Source/Main/ReviaRace.csproj
+++ b/Source/Main/ReviaRace.csproj
@@ -115,6 +115,7 @@
     <Compile Include="JobGiver\JobGiver_TakeCountToInventory.cs" />
     <Compile Include="Needs\BloodthirstNeed.cs" />
     <Compile Include="PersistentData\ReviaSettings.cs" />
+    <Compile Include="Precept\PreceptComp_KnowsMemoryThought_ExceptRevia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Render\PawnRenderNodeProperties_BodyPart.cs" />
     <Compile Include="Render\PawnRenderNode_HeadBodyPart.cs" />
