--- a/Source/Main/ReviaRace.csproj
+++ b/Source/Main/ReviaRace.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Comps\InvokeSanctify.cs" />
     <Compile Include="Comps\CompLifeLeech.cs" />
     <Compile Include="Comps\SacrificeSpotComp.cs" />
+    <Compile Include="Comps\SacrificeTracker.cs" />
     <Compile Include="Comps\StartRitual_Comp.cs" />
     <Compile Include="DebugActions.cs" />
     <Compile Include="Enums\BornSettingsEnum.cs" />
@@ -116,6 +117,7 @@
     <Compile Include="Needs\BloodthirstNeed.cs" />
     <Compile Include="PersistentData\ReviaSettings.cs" />
     <Compile Include="Precept\PreceptComp_KnowsMemoryThought_ExceptRevia.cs" />
+    <Compile Include="Precept\ThoughtWorker_Precept_NoRecentSacrifice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Render\PawnRenderNodeProperties_BodyPart.cs" />
     <Compile Include="Render\PawnRenderNode_HeadBodyPart.cs" />
