Cleanup (removed custom TargetFinder)

--- a/Source/Revia_VanillaPsycastExpanded/Revia_VanillaPsycastExpanded.csproj
+++ b/Source/Revia_VanillaPsycastExpanded/Revia_VanillaPsycastExpanded.csproj
@@ -53,7 +53,6 @@
     <Compile Include="AbilityExtension_EffecterOnTarget_ByBleedRate.cs" />
     <Compile Include="AbilityExtension_EffecterOnTarget_ByBodySize.cs" />
     <Compile Include="AbilityExtension_ReviaPsycast.cs" />
-    <Compile Include="AttackTargetFinderEx.cs" />
     <Compile Include="Bloodseek\Ability_Bloodseek.cs" />
     <Compile Include="BloodyExplosion\AbilityExtension_BloodyExplosion.cs" />
     <Compile Include="Defs.cs" />
@@ -96,5 +95,7 @@
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Publicize Include="Assembly-CSharp:Verse.AI.AttackTargetFinder.FindBestReachableMeleeTarget" />
+  </ItemGroup>
 </Project>
