--- a/Source/Revia_VanillaPsycastExpanded/Revia_VanillaPsycastExpanded.csproj
+++ b/Source/Revia_VanillaPsycastExpanded/Revia_VanillaPsycastExpanded.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Patches\Psycast_PrereqsCompleted_Patch.cs" />
     <Compile Include="Patches\PsyfocusGain_Patch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReapingReap\AbilityExtension_ReavingReap.cs" />
+    <Compile Include="ReavingReap\AbilityExtension_ReavingReap.cs" />
     <Compile Include="SkarneAvatar\JobGiver_SkarneAvatar.cs" />
     <Compile Include="SkarneAvatar\MentalState_SkarneAvatar.cs" />
     <Compile Include="SkarnesCurse\Ability_SkarnesCurse.cs" />
