--- a/Source/Main/ReviaRace.csproj
+++ b/Source/Main/ReviaRace.csproj
@@ -149,7 +149,9 @@
     <Compile Include="Rituals\RitualPosition_OnInteractionCell.cs" />
     <Compile Include="RitualRole\RitualRoleWithReviaGene.cs" />
     <Compile Include="Rituals\SacrificeBaseScore_Extension.cs" />
+    <Compile Include="Rituals\StageEndTrigger_CollectedBloodstones.cs" />
     <Compile Include="Rituals\StageEndTrigger_PawnDeliveredOrNotValidAndBloodstonesCollected.cs" />
+    <Compile Include="Rituals\StageFailTrigger_NotEnoughCarriedThings.cs" />
     <Compile Include="Rituals\StageFailTrigger_NotEnoughThings.cs" />
     <Compile Include="RoomRoleWorkers\SkarneChapel.cs" />
     <Compile Include="Utils.cs" />
