--- a/Source/Main/ReviaRace.csproj
+++ b/Source/Main/ReviaRace.csproj
@@ -100,6 +100,7 @@
     <Compile Include="HarmonyPatches\Entry.cs" />
     <Compile Include="HarmonyPatches\HeredityPatcher.cs" />
     <Compile Include="HarmonyPatches\NoIconColor_Patch.cs" />
+    <Compile Include="HarmonyPatches\PsyfocusGain_Patch.cs" />
     <Compile Include="Helpers\ReviaDefOf.cs" />
     <Compile Include="Helpers\Defs.cs" />
     <Compile Include="Helpers\PawnHelpers.cs" />
